@@ -1,5 +1,4 @@
-при сборке с meson, проверка правописания не пашет
-
+добавить отключение режиме одного экземпляра?
 
 при повторении последней функции, сендер-ту становится от пункта меню "повторить"
 
