@@ -1,0 +1,4 @@
+dir_build=
+command_build=
+command_clean=
+command_run=
